Created open-source-code link

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <span id="current-temp">23</span><span class="units">°</span>
         </div>
         <div class="col-4 c-f">
+
           <button id="celsius-link">°C</button> /
           <button id="fahrenheit-link">°F</button>
         </div>
@@ -113,10 +114,9 @@
         <div class="col-3 day">Sat</div>
       </div>
     </div>
-    <div class="footer">
-      <a href="https://www.chetnavaidyanathan.com" target="_blank"
-        >Coded by Chetna Vaidyanathan</a
-      >
+   <div class="footer">
+      <a id="open-source-code" href="https://github.com/Chetnavaid/weather-now-app" target="_blank">Open-source code</a>
+      by Chetna Vaidyanathan
     </div>
     <script src="src/script.js"></script>
   </body>
