--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </head>
   <body>
     <div class="container">
+    <div class="weather-app">
       <div class="row">
         <div class="col-6">
           <form class="my_form_id" id="search-city">
@@ -113,6 +114,7 @@
         <div class="col-3 day">Fri</div>
         <div class="col-3 day">Sat</div>
       </div>
+    </div>
     </div>
    <div class="footer">
       <a id="open-source-code" href="https://github.com/Chetnavaid/weather-now-app" target="_blank">Open-source code</a>
