--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               type="text"
               placeholder="Search City"
               id="search-city-input"
+              autocomplete="off"
             />
           </form>
           <hr class="search-bar-ruler" />
