Changed wind speed units

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="row">
           <div class="col-6 wind">Wind</div>
-          <div class="col-6 wind-speed"> <span id="wind-speed">11</span> <span id="wind-unit">m/s</span></div>
+          <div class="col-6 wind-speed"> <span id="wind-speed">11</span> <span id="wind-unit">km/hr</span></div>
         </div>
       </div>
       <hr />
