Created weather-icon function

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="last-time-updated">updated 2 mins ago</div>
       </div>
-      <div class="weather-logo">
+      <div id="weather-icon">
         <i class="fa-solid fa-sun"></i>
       </div>
 
