--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             Sunny & Clear Skies
           </div>
 
-          <div class="last-time-updated">updated 2 mins ago</div>
+          <div class="last-time-updated">
+            updated <span id="updated-time"></span> ago
+          </div>
         </div>
         <div id="weather-icon">
           <i class="fa-solid fa-sun"></i>
