--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
             </div>
           </div>
 
-          <div class="cityName" id="city-name">Dubai</div>
-          <div class="weather-description" id="weather-description">
-            Sunny & Clear Skies
-          </div>
+          <div class="cityName" id="city-name"></div>
+          <div class="weather-description" id="weather-description"></div>
 
           <div class="last-time-updated">
             updated <span id="updated-time"></span> ago
