--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="col-8 live-temp">
             <span id="current-temp">23</span><span class="units">°</span>
           </div>
-          <div class="col-4 c-f">
+          <div class="col-4 c-f" class="active">
             <button id="celsius-link">°C</button> /
             <button id="fahrenheit-link">°F</button>
           </div>
