Updated low and high temp placement

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <hr class="line-1" />
         <div class="row forecast-data">
           <div class="col-6">
-            <div class="min-temp">
-              <i class="fas fa-arrow-up"></i> <span id="min-temp"></span
-              ><span id="unit">°</span>
-            </div>
             <div class="max-temp">
-              <i class="fas fa-arrow-down"></i> <span id="max-temp"></span
-              ><span id="unit">°</span>
+              <strong>Highest</strong>
+              <span id="max-temp">21</span><span id="unit-1">°</span>
+            </div>
+            <div class="min-temp">
+              <strong>Lowest</strong>
+              <span id="min-temp">19</span><span id="unit-2">°</span>
             </div>
           </div>
           <div class="col-6">
