Fixed forecast data position

--- a/index.html
+++ b/index.html
@@ -74,22 +74,20 @@
         <div class="row forecast-data">
           <div class="col-6">
             <div class="max-temp">
-              <strong>Highest</strong>
-              <span id="max-temp">21</span><span id="unit-1">°</span>
+              <strong>Highest&nbsp;</strong>
+              <span id="max-temp">21</span>°
             </div>
             <div class="min-temp">
-              <strong>Lowest</strong>
-              <span id="min-temp">19</span><span id="unit-2">°</span>
+              <strong>Lowest&nbsp;</strong>
+              <span id="min-temp">19</span>°
             </div>
           </div>
           <div class="col-6">
             <div class="humid">
-              <strong>Humidity</strong> <span id="humidity-value"></span
-              ><span id="humidity-unit">%</span>
+              <strong>Humidity&nbsp;</strong> <span id="humidity-value"></span>%
             </div>
             <div class="wind">
-              <strong> Wind</strong> <span id="wind-speed"> </span
-              ><span id="wind-unit">km/hr</span>
+              <strong> Wind&nbsp;</strong> <span id="wind-speed"> </span>m/s
             </div>
           </div>
         </div>
