Updated forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -92,31 +92,19 @@
           </div>
         </div>
         <hr />
-        <div class="row forecast-icons">
-          <div class="col-3 weather-icon">
-            <i class="fa-solid fa-cloud-sun"></i>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-3">
+              <div class="forecast-icon">
+                <i class="fa-solid fa-cloud-sun"></i>
+              </div>
+              <div class="forecast-temperature">
+                <span class="forecast-temperature-max"> 21° </span>
+                / <span class="forecast-temperature-min"> 18°</span>
+              </div>
+              <div class="forecast-day">Sat</div>
+            </div>
           </div>
-          <div class="col-3 weather-icon">
-            <i class="fa-solid fa-cloud-showers-heavy"></i>
-          </div>
-          <div class="col-3 weather-icon">
-            <i class="fa-solid fa-cloud"></i>
-          </div>
-          <div class="col-3 weather-icon">
-            <i class="fa-solid fa-sun"></i>
-          </div>
-        </div>
-        <div class="row daily-forecast">
-          <div class="col-3 forecast">18° / 21°</div>
-          <div class="col-3 forecast">17° / 25°</div>
-          <div class="col-3 forecast">16° / 22°</div>
-          <div class="col-3 forecast">19° / 23°</div>
-        </div>
-        <div class="row forecast-days">
-          <div class="col-3 day">Wed</div>
-          <div class="col-3 day">Thurs</div>
-          <div class="col-3 day">Fri</div>
-          <div class="col-3 day">Sat</div>
         </div>
       </div>
     </div>
