Create forecast JS template

--- a/index.html
+++ b/index.html
@@ -92,20 +92,7 @@
           </div>
         </div>
         <hr />
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-3">
-              <div class="forecast-icon">
-                <i class="fa-solid fa-cloud-sun"></i>
-              </div>
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-max"> 21° </span>
-                / <span class="forecast-temperature-min"> 18°</span>
-              </div>
-              <div class="forecast-day">Sat</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </div>
     </div>
     <div class="footer">
