Fixed temperature position

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
         <div class="row">
           <div class="col-8 live-temp">
-            <span id="current-temp">23</span><span class="units">°</span>
+            <span id="current-temp">23</span
+            ><span id="celsius-link"><sup>°C</sup></span>
           </div>
-          <div class="col-4" id="celsius-link">C</div>
         </div>
         <hr class="line-1" />
         <div class="row forecast-data">
