Added personal website

--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
         target="_blank"
         >Open-source code</a
       >
-      by Chetna Vaidyanathan
+      by
+      <a
+        id="personal-website"
+        target="_blank"
+        href="https://www.chetnavaidyanathan.com/"
+      >
+        Chetna Vaidyanathan</a
+      >
     </div>
     <script src="src/script.js"></script>
   </body>
